--- a/index.ipynb
+++ b/index.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "Previously, you've seen how you can select ways of assessing your model fit metrics like MSE, SSE, and $R^2$. These values almost always improve when adding more variables, so if you only use these metrics to determine the optimal features of your model, overfitting is likely. You're going to be introduced to two new measures here: the AIC and the BIC.\n",
+    "Previously, you've seen how you can select ways of assessing your model fit metrics like MSE, SSE, and $R^2$. These values almost always improve when adding more variables, so if you only use these metrics to determine the optimal features of your model, it is highly likely that you will overfit the model to your data. In this lesson you'll be introduced to two new measures: AIC and BIC, which give you a comprehensive measure of model performace taking into account the additional variables. \n",
     "\n",
     "\n",
     "## Objectives\n",
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The AIC"
+    "## AIC"
    ]
   },
   {
@@ -37,15 +37,15 @@
    "source": [
     "The formula for the AIC, invented by Hirotugu Akaike in 1973 and short for \"Akaike's Information Criterion\" is given by:\n",
     "\n",
-    "#### $$ \\text{AIC} = 2k -2\\ln(\\hat{L}) $$\n",
+    "#### $$ \\text{AIC} = -2\\ln(\\hat{L}) + 2k $$\n",
     "\n",
     "Where:\n",
-    "* k : length of the parameter space (i.e. the number of features)\n",
+    "* $k$ : length of the parameter space (i.e. the number of features)\n",
     "* $\\hat{L}$ : the maximum value of the likelihood function for the model\n",
     "\n",
     "Another way to phrase the equation is:\n",
     "\n",
-    "**AIC(model) = -2 \\* log-likelihood(model) + 2 \\* (length of the parameter space)**"
+    "$$ \\text{AIC(model)} =  - 2 * \\text{log-likelihood(model)} + 2 * \\text{length of the parameter space} $$"
    ]
   },
   {
@@ -60,14 +60,14 @@
     "Note that directly comparing the values of log-likelihood maxima for different models (without including the penalty) is not good enough for model comparison because including more parameters in a model will *always* give rise to an increased value of the maximum likelihood. Due to that reason, searching for the model with maximal log-likelihood\n",
     "would always lead to the model with the most parameters. The AIC balances this by penalizing for the number of parameters, hence searching for models with few parameters but fitting the data well.\n",
     "\n",
-    "In Python, the AIC is built into Statsmodels and some instances of Scikit learn (such as LassoLarsIC, which you'll use in the lab coming up soon."
+    "In Python, the AIC is built into `statsmodels` and in `sklearn` (such as `LassoLarsIC`, which you'll use in the upcoming lab). "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The BIC"
+    "## BIC"
    ]
   },
   {
@@ -76,18 +76,18 @@
    "source": [
     "The BIC (Bayesian Information Criterion) is very similar to the AIC and emerged as a Bayesian response to the AIC, but can be used for the exact same purposes. The idea is to select the candidate model with the highest probability\n",
     "given the data. \n",
-    "This idea can be formalized inside a Bayesian framework, involving prior probabilities on candidate models along with prior densities on all parameters in the models. The penalty is slightly changed and depends on the number of rows to the data set:\n",
+    "This idea can be formalized inside a Bayesian framework, involving prior probabilities on candidate models along with prior densities on all parameters in the models. The penalty is slightly changed and depends on the number of rows in the dataset:\n",
     "\n",
-    "$$ \\text{BIC} = \\ln(n)k - 2\\ln(\\hat{L}) $$\n",
+    "$$ \\text{BIC} = - 2\\ln(\\hat{L}) + \\ln(n) * k $$\n",
     "\n",
     "where:\n",
     "\n",
-    "* $\\hat{L}$ and k are the same as the previous model\n",
-    "* n : the number of data points (the sample size)\n",
+    "* $\\hat{L}$ and $k$ are the same as in AIC\n",
+    "* $n$ : the number of data points (the sample size)\n",
     "\n",
     "Another way to phrase the equation is:\n",
     "\n",
-    "**BIC(model) = -2 \\* log-likelihood(model) + log(number of observations) \\* (length of the parameter space)**\n",
+    "$$ \\text{BIC(model)} = -2 * \\text{log-likelihood(model)} + \\text{log(number of observations)} * \\text{(length of the parameter space)} $$\n",
     "\n",
     "Like the AIC, the **lower** your BIC, the better your model is performing."
    ]
@@ -96,12 +96,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Uses of the AIC and BIC\n",
+    "## Uses of AIC and BIC\n",
     "\n",
     "- Performing feature selection: comparing models with only a few variables and more variables, computing the AIC/BIC and select the features that generated the lowest AIC or BIC\n",
     "- Similarly, selecting or not selecting interactions/polynomial features depending on whether or not the AIC/BIC decreases when adding them in\n",
-    "- Computing the AIC and BIC for several values of the regularization parameter in Ridge/Lasso models and selecting the best regularization parameter.\n",
-    "- Many more!"
+    "- Computing the AIC and BIC for several values of the regularization parameter in Ridge/Lasso models and selecting the best regularization parameter, and many more! "
    ]
   },
   {
@@ -115,27 +114,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great! Let's now practice everything you've learned in this section!"
+    "Great! Now that you know about AIC and BIC and why they are important, it's time to for you to calculate them in Python. "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
