--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great! Now that you know about AIC and BIC and why they are important, it's time to for you to calculate them in Python. "
+    "Great! In this lesson you learned about AIC and BIC, two measures that are helpful when comparing and evaluating models with varying number of features. "
    ]
   }
  ],
