--- a/index.ipynb
+++ b/index.ipynb
@@ -20,8 +20,7 @@
     "\n",
     "You will be able to:\n",
     "\n",
-    "- Understand that both AIC and BIC are information criteria that also can be used to perform model selection\n",
-    "- Understand how AIC and BIC use likelihood"
+    "- Define AIC and BIC in the context of assessing model fit "
    ]
   },
   {
